[gd_scene load_steps=15 format=1]

[ext_resource path="res://Scenes/player/player.gd" type="Script" id=1]
[ext_resource path="res://GFX/Players/bunny2_stand.png" type="Texture" id=2]
[ext_resource path="res://GFX/Players/bunny2_ready.png" type="Texture" id=3]
[ext_resource path="res://GFX/Players/bunny2_hurt.png" type="Texture" id=4]
[ext_resource path="res://GFX/Players/bunny2_jump.png" type="Texture" id=5]
[ext_resource path="res://GFX/Players/bunny2_walk1.png" type="Texture" id=6]
[ext_resource path="res://GFX/Players/bunny2_walk2.png" type="Texture" id=7]
[ext_resource path="res://SFX/jump1.wav" type="Sample" id=8]
[ext_resource path="res://SFX/pain.wav" type="Sample" id=9]

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 36.2615, 92.9976, -35.9023, 93.243, -35.9331, 78.3309, 36.2615, 78.3309 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -40.8602, -70.0439, -33.7146, -95.2597, 33.9072, -95.2553, 41.0945, -68.9898, 29.4414, -39.4021, -31.3735, -42.6378 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( -61.1234, 31.302, -53.8644, -6.14726, -31.3735, -42.6378, 29.4414, -39.4021, 55.2603, -5.6389, 62.8893, 33.3694, 53.6239, 64.2708, 36.2615, 78.3309, -35.9331, 78.3309, -55.6606, 60.3125 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SampleLibrary" id=3]

samples/jump = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/pain = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[node name="player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 6 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="anim_sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "idle"
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="polygon" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -31.3735, -42.6378, -40.8602, -70.0439, -33.7146, -95.2597, 33.9072, -95.2553, 41.0945, -68.9898, 29.4414, -39.4021, 55.2603, -5.6389, 62.8893, 33.3694, 53.6239, 64.2708, 36.2615, 78.3309, 36.2615, 92.9976, -35.9023, 93.243, -35.9331, 78.3309, -55.6606, 60.3125, -61.1234, 31.302, -53.8644, -6.14726 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="left_ray" type="RayCast2D" parent="."]

transform/pos = Vector2( -34, 80 )
enabled = true
cast_to = Vector2( 0, 17 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="right_ray" type="RayCast2D" parent="."]

transform/pos = Vector2( 34, 80 )
enabled = true
cast_to = Vector2( 0, 17 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


